--- a/stylesheet.css
+++ b/stylesheet.css
@@ -182,4 +182,37 @@ html {
 .social-button:hover {
     color: black;
 }
+.footer-logo {
+    width: 7rem;
+}
+.copyright {
+    font-size: 0.92rem;
+}
+.footer-links {
+    color: grey;
+    text-decoration: none;
+    font-size: 0.95rem;
+}
+.footer-links:hover {
+    text-decoration: underline;
+    text-underline-offset: 5px;
+    color: white;
+    padding-bottom: 5px;
+}
+@media screen and (max-width: 992px) {
+    .footer-logo {
+        width: 6rem;
+    }
+    br {
+        display: none;
+    }
+    .copyright {
+        font-size: 0.87rem;
+    }
+}
+@media screen and (max-width: 768px) {
+    .footer-logo {
+        width: 6.5rem;
+    }
+}
 
